--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+header {
+  text-align: center;
+  padding: 20px;
+  padding-top: 0px;
+  color: #333;
+}
+textarea {
+  width: 100%;
+  min-height: 100px;
+  text-align: center;
+  font-size: large;
+}
+
+.card {
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #333;
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 30px 40px;
+}
+.card-header {
+  text-align: center;
+}
+.card-header::after {
+  content: " ";
+  display: block;
+  width: 100%;
+  background: #ddd;
+  height: 1px;
+  margin: 20px 0;
+}
+
+.card-body {
+  min-height: 100px;
+  width: 100%;
+}
+
+.card-footer {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-footer::before {
+  content: " ";
+  display: block;
+  width: 100%;
+  background: #ddd;
+  height: 1px;
+  margin: 20px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.option-label {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.toggle-container {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.toggle-container .option-label {
+  flex: 1;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toggle-container .option-label:last-child {
+  margin-right: 0;
+}
+
+.toggle-on {
+  color: #4caf50;
+  cursor: pointer;
+}
+
+.toggle-off {
+  color: #ccc;
+  cursor: pointer;
+}
+
+.btn {
+  border: none;
+  background-color: #c28a4e;
+  color: #fff;
+  font-size: 18px;
+  padding: 12px 24px;
+  border-radius: 25px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #0f7ae5;
+}
+
+.clipboard-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #999;
+  transition: color 0.3s;
+}
+
+.clipboard-icon:hover {
+  color: #666;
+}
+
+.password-container {
+  position: relative;
+}
+
+#password {
+  width: 100%;
+  padding-right: 40px; /* Add padding for the clipboard icon */
 }
